--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
         <h1>Acesse também nossas Redes Sociais!</h1>
       </div>
       <div class=" col-6 mt-3">
-        <a href="https://www.instagram.com/maonaroda_guarulhos/"><img src="imagens/intagram.png" width="100" alt=""></a>
+        <a href="https://www.instagram.com/maonaroda_guarulhos/"><img src="imagens/intagram.png" width="100" alt="logo_inst"></a>
         <h4>Instagram</h4>
       </div>
       <div class="col-6 mt-3">
         <a href="https://api.whatsapp.com/send?phone=551124215066"><img src="imagens/whatsapp.png" width="100"
-            alt=""></a>
+            alt="logo_whats"></a>
         <h4>Whatsapp</h4>
       </div>
     </div>
