--- a/index_menu_nao_del.html
+++ b/index_menu_nao_del.html
@@ -105,7 +105,7 @@
 
                 <div class="col-md-6 col-sm-12 col-lg-3"><a href="index_sobremesas.html" class="produtos">
                         <article class="produto">
-                            <img src="imagens/sobremesa.jpg" class="cabecalho__produto" alt="sobremesas">
+                            <img src="imagens/sobremesa.png" class="cabecalho__produto" alt="sobremesas">
                             <footer class="rodape__produto">
                                 <h3>Sobremesas</h3>
                             </footer>
@@ -116,7 +116,7 @@
 
                 <div class="col-md-6 col-sm-12 col-lg-3"><a href="index_aperitivos.html" class="produtos">
                         <article class="produto">
-                            <img src="imagens/porcoes.jpg" class="cabecalho__produto" alt="aperitivos">
+                            <img src="imagens/porcoes.png" class="cabecalho__produto" alt="aperitivos">
                             <footer class="rodape__produto">
                                 <h3>Porções</h3>
                             </footer>
@@ -127,7 +127,7 @@
 
                 <div class="col-md-6 col-sm-12 col-lg-3"><a href="index_sopas.html" class="produtos">
                         <article class="produto">
-                            <img src="imagens/sopas.jpg" class="cabecalho__produto" alt="sopas">
+                            <img src="imagens/sopas.png" class="cabecalho__produto" alt="sopas">
                             <footer class="rodape__produto">
                                 <h3>Sopas</h3>
                             </footer>
@@ -138,7 +138,7 @@
 
                 <div class="col-md-6 col-sm-12 col-lg-3"><a href="index_massas.html" class="produtos">
                         <article class="produto">
-                            <img src="imagens/massas.jpg" class="cabecalho__produto" alt="massas">
+                            <img src="imagens/massas.png" class="cabecalho__produto" alt="massas">
                             <footer class="rodape__produto">
                                 <h3>Massas</h3>
                             </footer>
@@ -149,7 +149,7 @@
                 <div class="col-md-6 col-sm-12 col-lg-3">
                     <a href="index_sucos.html" class="produtos">
                         <article class="produto">
-                            <img src="imagens/sucos.jpg" class="cabecalho__produto" alt="sucos">
+                            <img src="imagens/sucos.png" class="cabecalho__produto" alt="sucos">
                             <footer class="rodape__produto">
                                 <h3>Sucos</h3>
                             </footer>
@@ -160,7 +160,7 @@
                 <div class="col-md-6 col-sm-12 col-lg-3">
                     <a href="index_cervejas.html" class="produtos">
                         <article class="produto">
-                            <img src="imagens/cervejas.jpg" class="cabecalho__produto" alt="cervejas">
+                            <img src="imagens/cervejas.png" class="cabecalho__produto" alt="cervejas">
                             <footer class="rodape__produto">
                                 <h3>Cervejas</h3>
                             </footer>
@@ -171,7 +171,7 @@
 
                 <div class="col-md-6 col-sm-12 col-lg-3"><a href="index_batidas.html" class="produtos">
                         <article class="produto">
-                            <img src="imagens/batidas.jpeg" class="cabecalho__produto" alt="batidas">
+                            <img src="imagens/batidas.png" class="cabecalho__produto" alt="batidas">
                             <footer class="rodape__produto">
                                 <h3>Batidas</h3>
                             </footer>
@@ -182,7 +182,7 @@
 
                 <div class="col-md-6 col-sm-12 col-lg-3"><a href="index_caipirinha.html" class="produtos">
                         <article class="produto">
-                            <img src="imagens/caipirinha.jpg" class="cabecalho__produto" alt="caipirinha">
+                            <img src="imagens/caipirinha.png" class="cabecalho__produto" alt="caipirinha">
                             <footer class="rodape__produto">
                                 <h3>Caipirinha</h3>
                             </footer>
@@ -193,7 +193,7 @@
 
                 <div class="col-md-6 col-sm-12 col-lg-3"><a href="index_licor.html" class="produtos">
                         <article class="produto">
-                            <img src="imagens/licor.jpg" class="cabecalho__produto" alt="licor">
+                            <img src="imagens/licor.png" class="cabecalho__produto" alt="licor">
                             <footer class="rodape__produto">
                                 <h3>Licor</h3>
                             </footer>
@@ -215,7 +215,7 @@
 
                 <div class="col-md-6 col-sm-12 col-lg-3"><a href="index_drinks.html" class="produtos">
                         <article class="produto">
-                            <img src="imagens/drinks.jpg" class="cabecalho__produto" alt="drinks">
+                            <img src="imagens/drinks.png" class="cabecalho__produto" alt="drinks">
                             <footer class="rodape__produto">
                                 <h3>Drinks</h3>
                             </footer>
